--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tailwindcss -o ./src/css/sailfishStyles.css",
-    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +28,7 @@
     "tailwindcss-typography": "^3.1.0"
   },
   "dependencies": {
-    "depcheck": "^1.4.3"
+    "depcheck": "^1.4.3",
+    "live-server": "^1.2.2"
   }
 }
